Add version for the catalog item
